--- a/index.html
+++ b/index.html
@@ -2,16 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Raindrops • JJQAD</title>
-  <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
-  <link rel="stylesheet" href="style.css">
-  <meta name="description" content="Expanding ripple rings with evolving spawn rate and soft plop sounds. Click to enable audio.">
-</head>
-<body>
-  <!-- p5.js and p5.sound from CDN -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <title>Raindrops</title>
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Raindrops">
+  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="apple-touch-icon" href="icons/icon-180.png">
+  <meta name="theme-color" content="#0f2a3b">
+  <meta name="description" content="Gentle raindrop ripples with sound.">
   <script src="https://cdn.jsdelivr.net/npm/p5@1.9.3/lib/p5.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.9.3/lib/addons/p5.sound.min.js"></script>
+  <style>html,body{margin:0;padding:0;height:100%;background:#0f2a3b}canvas{display:block}*{-webkit-touch-callout:none;-webkit-user-select:none;user-select:none}</style>
+</head>
+<body>
   <script src="sketch.js"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('./sw.js').catch(()=>{});
+      });
+    }
+  </script>
 </body>
 </html>
