--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <style>html,body{margin:0;padding:0;height:100%;background:#0f2a3b}canvas{display:block}*{-webkit-touch-callout:none;-webkit-user-select:none;user-select:none}</style>
 </head>
 <body>
-  <script src="sketch.js"></script>
+  <script src="sketch.v6.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('./sw.js').catch(()=>{});
+        navigator.serviceWorker.register('./sw.v6.js', { scope: './' }).catch(()=>{});
       });
     }
   </script>
